compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_concrete_to_existing_generic_type_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn wibble(Int, a) -> #(Int, a)
+ pub fn wibble(a, a) -> #(a, a)
