compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_concrete_to_generic_type_with_other_unchanging_generic_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub fn wibble(Int, a) -> #(Int, a)
+ pub fn wibble(a, b) -> #(a, b)
