compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_constant_annotation_and_type_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub const list: List(Int)
+ pub const list: List(Float)
