compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_constant_to_function_of_same_type_while_adding_labels_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub const add: fn(Int, Int) -> Int
+ pub fn add(first: Int, second: Int) -> Int
