compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_constructor_field_type_from_concrete_to_generic_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Wibble(a) {
-   Wibble(Int)
- }
+ pub type Wibble(a) {
+   Wibble(a)
+ }
