compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_custom_type_parameter_order_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Wibble(a, b) {
-   Wibble(a, b)
- }
+ pub type Wibble(a, b) {
+   Wibble(b, a)
+ }
