compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_custom_type_to_type_alias_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type MyBool {
-   True
-   False
- }
+ pub type MyBool = Bool
