compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_different_concrete_constant_types_to_the_same_generic_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub const lists: #(List(Int), List(Float))
+ pub const lists: #(List(a), List(a))
