compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_function_annotation_and_type_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn pair(Int, Int) -> #(Int, Int)
+ pub fn pair(Float, Float) -> #(Float, Float)
