compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_function_with_labels_to_constant_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn add(Int, addend: Int) -> Int
+ pub const add: fn(Int, Int) -> Int
