compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_generic_constant_type_to_concrete_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub const list: List(a)
+ pub const list: List(Int)
